@@ -1,5 +1,15 @@
 2003-12-19  Andreas Tobler  <a.tobler@schweiz.ch>
 
+	* include/fibheap.h (fibnode): Use __extension__ for
+	bit-fields mark and degree if __GNUC__.
+
+2003-12-18  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* include/fibheap.h (fibnode): Use unsigned long int for
+	bit-fields if __GNUC__ is defined.
+
+2003-12-19  Andreas Tobler  <a.tobler@schweiz.ch>
+
 	* fibheap.h (fibnode): Use __extension__ for
 	bit-fields mark and degree if __GNUC__.
 
